Signup and update account

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,4 +39,25 @@ en:
   remember_me: "Remember me on this computer"
   invalid_email_password: "Invalid email/password combination"
   done: "Done"
-
+  check_email_request_message: "Please check your email to activate your account"
+  should_be_less_than_x_unit: "should be less than %{x} %{unit}"
+  be_a_member: "Be a member!"
+  account_activation_subject: "Account activation"
+  password_reset_subject: "Password reset"
+  activate_now: "activate now"
+  reset_noew: "reset now"
+  hi: "Hi"
+  click_on_this_link_to: "Click on this link to "
+  update_account: "Update account"
+  update_account_successfully: "Update account successfully!"
+  password_reset_email_msg: "Email sent with password reset instructions"
+  email_not_found: "Email address not found"
+  password_cannot_empty: "Password can not be empty"
+  password_have_been_reset: "Password has been reset!"
+  password_reset_has_expired: "Password reset has expired"
+  Reset_password: "Reset password"
+  forgot_password: "Forgot passoword?"
+  file_size_error_msg: "Maximum file size is 2MB. Please choose a smaller file."
+  account_activated: "Account activated!"
+  invalid_activation_link: "Invalid activation link"
+  enter_ur_email_to_reset_password: "Enter your email to reset your password"
