Using nested form, nested attributes to add word and its means

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -76,3 +76,10 @@ en:
   follow: "Follow"
   unfollow: "Unfollow"
   start: "Start"
+  update_successfully: "update successfully"
+  ignore: "ignore"
+  add: "add"
+  remove: "remove"
+  enter_new_word: "Enter new word..."
+  mean: "mean"
+  word: "word"
