--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,7 +25,6 @@ en:
   e_learning: "E-Learning"
   about: "About"
   home: "Home"
-  word_list: "Work List"
   categories: "Categories"
   lesson: "Lesson"
   user_name: "User name"
@@ -83,3 +82,8 @@ en:
   enter_new_word: "Enter new word..."
   mean: "mean"
   word: "word"
+  meaning: "Meaning"
+  learned: "Learned"
+  not_learn: "Not learned"
+  all: "All"
+  search: "Search"
