using csv to import words and its means | export them to csv file

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -89,3 +89,7 @@ en:
   not_learn: "Not learned"
   all: "All"
   search: "Search"
+  import_successfully: "import successfully"
+  file_is_required: "file_is_required"
+  import_using_fileType_file: "Import using %{fileType} file"
+  download: "download"
