Adding timer using jQuery, changing the handling ways in lesson controller

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -102,7 +102,7 @@ en:
   normal: "normal"
   update_category: "update category"
   num_of_words: "number of words"
-  submit_error: "Submit error"
+  submit_error: "submit error"
   question: "Question "
   not_enough_word: "Not enough word to learn!"
   result: "Result"
@@ -110,3 +110,5 @@ en:
   lesson_x: "Lesson %{x}"
   enter: "Enter"
   all_learned_lesson: "All learned lesson"
+  save_sucessfully: "save successfully"
+  time_over: "Time over!"
