Finish show lesson

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -109,3 +109,4 @@ en:
   lesson_result_for: "Lessons's result for "
   lesson_x: "Lesson %{x}"
   enter: "Enter"
+  all_learned_lesson: "All learned lesson"
