Validation in backend with admin account

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -112,3 +112,5 @@ en:
   all_learned_lesson: "All learned lesson"
   save_sucessfully: "save successfully"
   time_over: "Time over!"
+  not_permission: "Not permission"
+  please_log_in: "Please login first!"
