Refactor Wordlist And Users

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -82,8 +82,8 @@ en:
   add: "add"
   remove: "remove"
   enter_new_word: "Enter new word..."
-  mean: "mean"
-  word: "word"
+  mean: "Mean"
+  word: "Word"
   meaning: "Meaning"
   learned: "Learned"
   not_learn: "Not learned"
